fix jQuery UI tooltip z-index to be less than select2 dropdown, fix #279

--- a/src/containers/editable-container.css
+++ b/src/containers/editable-container.css
@@ -17,4 +17,5 @@
 
 .editable-container.ui-widget {
    font-size: inherit;  /* jqueryui widget font 1.1em too big, overwrite it */
+   z-index: 9990; /* should be less than select2 dropdown z-index to close dropdown first when click */
 }
